--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -2,6 +2,7 @@ body {
   background: #fafafa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
+  padding: 10px 10px 110px 10px;
 }
 
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -101,7 +102,7 @@ h1 {
 }
 
 h2, li {
-  color: white;    
+  color: white;
 }
 
 h1 > img {
@@ -109,7 +110,7 @@ h1 > img {
 }
 
 .disabled h2, .disabled li {
-	background-color: silver;	
+	background-color: silver;
 }
 
 h2 {
@@ -143,5 +144,25 @@ li {
 	li:not(:nth-child(4n)) {
 		border-right: 10px solid white;
 	}
+}
 
+#log {
+	position: fixed;
+    bottom: 0;
+    height: 100px;
+    background: white;
+    right: 0;
+    left: 0;
+	padding: 15px;
+    overflow-y: scroll;
+}
+
+#map .modal-body {
+	padding: 0;
+}
+
+#map iframe {
+	border: 0 none;
+	width: 100%;
+	height: 100%;
 }
