--- a/src/web/styles/app.css
+++ b/src/web/styles/app.css
@@ -5,69 +5,15 @@ body {
   padding: 10px 10px 110px 10px;
 }
 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-@-webkit-keyframes fadeOut { from { opacity:1; } to { opacity:0; } }
-
-@-moz-keyframes fadeOut { from { opacity:1; } to { opacity:0; } }
-
-@keyframes fadeOut { from { opacity:1; } to { opacity:0; } }
-
-.fade-in {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
-
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-
-    -webkit-animation-duration:0.3s;
-    -moz-animation-duration:0.3s;
-    animation-duration:0.3s;
-
-    -webkit-animation-delay: 0.5s;
-    -moz-animation-delay: 0.5s;
-    animation-delay: 0.5s;
-}
-
-.fade-out {
-    opacity:0;
-    -webkit-animation:fadeIn ease-in 1;
-    -moz-animation:fadeIn ease-in 1;
-    animation:fadeIn ease-in 1;
-
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    animation-fill-mode:forwards;
-
-    -webkit-animation-duration:0.3s;
-    -moz-animation-duration:0.3s;
-    animation-duration:0.3s;
-
-    -webkit-animation-delay: 0.5s;
-    -moz-animation-delay: 0.5s;
-    animation-delay: 0.5s;
-}
-
 .splash {
      background-color: #0c9abe;
-	 /*background-size: cover;
-     background-attachment: fixed;
-	 */
-
      position: fixed;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      min-height: 360px;
-     z-index: 999;
+     z-index: 5999;
      text-align: center;
  }
 
@@ -97,41 +43,6 @@ body {
     left: 20px;
 }
 
-h1 {
-    color: #039CBB;
-}
-
-h2, li {
-  color: white;
-}
-
-h1 > img {
-    vertical-align: middle;
-}
-
-.disabled h2, .disabled li {
-	background-color: silver;
-}
-
-h2 {
-    background-color: #DB4437;
-    padding: 10px;
-}
-
-ul {
-    padding: 0;
-}
-
-li {
-    display: inline-block;
-    list-style-type: none;
-    background-color: #019AC4;
-	padding: 10px 0;
-	margin: 10px 0 0 0;
-	cursor: pointer;
-}
-
-
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 992px) {
 	li:nth-child(2n+1) {
@@ -146,17 +57,6 @@ li {
 	}
 }
 
-#log {
-	position: fixed;
-    bottom: 0;
-    height: 100px;
-    background: white;
-    right: 0;
-    left: 0;
-	padding: 15px;
-    overflow-y: scroll;
-}
-
 #map .modal-body {
 	padding: 0;
 }
@@ -165,4 +65,8 @@ li {
 	border: 0 none;
 	width: 100%;
 	height: 100%;
+}
+
+.app-body {
+	padding-top: 50px;
 }
